# openmpf-components

./: .gitignore  README.md
cpp/: CMakeLists.txt  ComponentSetup.cmake
cpp/CaffeDetection/: CMakeLists.txt  CaffeDetection.cpp  CaffeDetection.h  LICENSE  ModelFileParser.cpp  ModelFileParser.h  ModelFileParserException.h  README.md  sample_caffe_detector.cpp
cpp/CaffeDetection/test/: CMakeLists.txt  test_caffe_detection.cpp
cpp/DarknetDetection/: CMakeLists.txt  DarknetDetection.cpp  DarknetDetection.h  DarknetStreamingDetection.cpp  DarknetStreamingDetection.h  Dockerfile  LICENSE  ModelSettings.h  ModelsIniParser.cpp  ModelsIniParser.h  README.md  SPSCBoundedQueue.h  Trackers.cpp  Trackers.h  sample_darknet_detector.cpp
cpp/DarknetDetection/darknet_lib/: CMakeLists.txt
cpp/DarknetDetection/darknet_wrapper/: CMakeLists.txt  DarknetImpl.cpp  DarknetImpl.h  Trackers.cpp  Trackers.h
cpp/DarknetDetection/include/: DarknetInterface.h
cpp/DarknetDetection/test/: CMakeLists.txt  test_darknet_detection.cpp
cpp/DlibFaceDetection/: CMakeLists.txt  DlibFaceDetection.cpp  DlibFaceDetection.h  Dockerfile  LICENSE  README.md  sample_dlib_face_detector.cpp
cpp/DlibFaceDetection/test/: CMakeLists.txt  test_dlib_face_config.ini  test_dlib_face_detection.cpp
cpp/KeywordTagging/: .dockerignore  CMakeLists.txt  Dockerfile  JSONValue.cpp  KeywordTagging.cpp  KeywordTagging.h  KeywordTaggingComponent.cpp  KeywordTaggingComponent.h  README.md  sample_keyword_tagger.cpp
cpp/KeywordTagging/plugin-files/: text-tags.json
cpp/KeywordTagging/test/: CMakeLists.txt  sample_keyword_tagger  test_keyword_tagging.cpp
cpp/OCR/: README
cpp/OCR/src/: CMakeLists.txt  ImageTransformer.cpp  ImageTransformer.h  main.cpp
cpp/OalprLicensePlateTextDetection/: CMakeLists.txt  Dockerfile  LICENSE  LicensePlateTextDetection.cpp  LicensePlateTextDetection.h  README.md  sample_oalpr_text_detector.cpp
cpp/OalprLicensePlateTextDetection/test/: CMakeLists.txt  test_oalpr_text_config.ini  test_oalpr_text_detection.cpp
cpp/OcvDnnComponent/: CMakeLists.txt  OcvDnnComponent.cpp  OcvDnnComponent.h  README.md  sample_ocv_dnn_classifier.cpp
cpp/OcvDnnComponent/test/: CMakeLists.txt  test_ocv_dnn_component.cpp
cpp/OcvDnnDetection/: CMakeLists.txt  Dockerfile  LICENSE  OcvDnnDetection.cpp  OcvDnnDetection.h  README.md  sample_ocv_dnn_classifier.cpp
cpp/OcvDnnDetection/test/: CMakeLists.txt  test_ocv_dnn_detection.cpp  vehicle-allow-list.txt
cpp/OcvFaceDetection/: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  Log4cxxConfig.xml  OcvDetection.cpp  OcvDetection.h  OcvFaceDetection.cpp  OcvFaceDetection.h  README.md  sample_ocv_face_detector.cpp
cpp/OcvFaceDetection/plugin-files/: health-check.ini
cpp/OcvFaceDetection/test/: CMakeLists.txt  test_ocv_face_config.ini  test_ocv_face_detection.cpp
cpp/OcvFrameReader/: CMakeLists.txt  OcvFrameReader.h
cpp/OcvSsdFaceDetection/: CMakeLists.txt  DetectionLocation.cpp  DetectionLocation.h  Dockerfile  JobConfig.cpp  JobConfig.h  KFTracker.cpp  KFTracker.h  LICENSE  OcvSsdFaceDetection.code-workspace  OcvSsdFaceDetection.cpp  OcvSsdFaceDetection.h  OrientationType.h  README.md  Track.cpp  Track.h  sample_ocv_ssd_face_detector.cpp  types.h  util.cpp  util.h
cpp/OcvSsdFaceDetection/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cpp/OcvSsdFaceDetection/test/: CMakeLists.txt  DetectionComparisonA.cpp  DetectionComparisonA.h  test_ocv_ssd_face_config.ini  test_ocv_ssd_face_detection.cpp
cpp/OcvYoloDetection/: .dockerignore  .gitignore  AllowListFilter.cpp  AllowListFilter.h  BaseYoloNetworkImpl.cpp  BaseYoloNetworkImpl.h  CMakeLists.txt  Cluster.cpp  Cluster.h  Config.cpp  Config.h  DetectionLocation.cpp  DetectionLocation.h  Dockerfile  Frame.cpp  Frame.h  JobConfig.cpp  JobConfig.h  KFTracker.cpp  KFTracker.h  LICENSE  LocalYoloNetworkImpl.cpp  OcvYoloDetection.cpp  OcvYoloDetection.h  README.md  Track.cpp  Track.h  TritonClient.cpp  TritonClient.h  TritonExceptionMacros.h  TritonInferencer.cpp  TritonInferencer.h  TritonTensorMeta.cpp  TritonTensorMeta.h  TritonYoloNetworkImpl.cpp  WhitelistFilter.cpp  WhitelistFilter.h  YoloNetwork.cpp  YoloNetwork.h  build.sh  (+9 more)
cpp/OcvYoloDetection/.devcontainer/: .gdbinit  Dockerfile  devcontainer.json  docker-compose.yml
cpp/OcvYoloDetection/test/: CMakeLists.txt  (+7 more)
cpp/SceneChangeDetection/: CMakeLists.txt  Dockerfile  LICENSE  README.md  SceneChangeDetection.cpp  SceneChangeDetection.h  sample_caffe_detector.cpp  sample_scene_change_detector.cpp
cpp/TesseractOCRTextDetection/: .dockerignore  CMakeLists.txt  DICTIONARIES.md  Dockerfile  ImageMagick-policy.patch  JSONValue.cpp  LICENSE  README  README.md  TesseractOCRTextDetection.cpp  TesseractOCRTextDetection.h  main.cpp  mpf_tessdata_model_updater.cpp  mpf_tessdata_model_updater.h  sample_tesseract_ocr_detector.cpp  tessdata_model_updater.cpp  tessdata_model_updater.h
cpp/TrtisDetection/: .dockerignore  .gitignore  .mpfdockeronly  CMakeLists.txt  Dockerfile  Dockerfile.clion-debug  EncodeFeatureStorage.cpp  EncodeFeatureStorage.h  IFeatureStorage.h  JsonFeatureStorage.cpp  JsonFeatureStorage.h  README.md  S3FeatureStorage.cpp  S3FeatureStorage.h  S3StorageHelper.cpp  S3StorageHelper.h  S3StorageUtil.cpp  S3StorageUtil.h  TrtisDetection.cpp  TrtisDetection.h  TrtisDetection.hpp  base64.h  run_tests.sh  sample_trtis_detector.cpp  uri.h  uri.hpp
python/ClipDetection/: Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  setup.cfg
python/GeminiDetection/: Dockerfile  README.md  gemini-process-image.py  output.json  pyproject.toml  setup.cfg
python/LlamaVideoSummarization/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
python/LlavaDetection/: Dockerfile  LICENSE  README.md  gemini-process-image.py  pyproject.toml  setup.cfg
python/NlpTextCorrection/: Dockerfile  NOTICE  README.md  sample_nlp_text_corrector.py  setup.cfg  setup.py
python/PixtralDetection/: Dockerfile  LICENSE  setup.cfg
python/QwenSpeechSummarization/: Dockerfile  Dockerfile.vllm  README.md  pyproject.toml  setup.cfg  vllm-entrypoint.sh
(+862 files in other folders)
